libs/@local/hashql/ast/tests/ui/lowering/import-resolver/rollback.jsonc
//@ run: fail
//@ description: imports should be properly scoped
[
  "if",
  { "#literal": true },
  ["use", "math", { "#tuple": ["lshift"] }, "lshift"],
  "lshift"
  //~^ ERROR 'lshift' needs to be imported first
]
